@@ -272,6 +272,7 @@ Klasses_jar_SRCS = \
 	$(javax_swing_plaf_SRCS) \
 	$(javax_swing_plaf_basic_SRCS) \
 	$(javax_swing_plaf_metal_SRCS) \
+	$(javax_swing_plaf_multi_SRCS) \
 	$(javax_swing_table_SRCS) \
 	$(javax_swing_text_SRCS) \
 	$(javax_swing_text_html_SRCS) \
@@ -3966,6 +3967,38 @@ javax_swing_plaf_metal_SRCS = \
 	javax/swing/plaf/metal/MetalToolTipUI.java \
 	javax/swing/plaf/metal/MetalTreeUI.java \
 	javax/swing/plaf/metal/MetalUtils.java
+javax_swing_plaf_multi_SRCS = \
+	javax/swing/plaf/multi/MultiButtonUI.java \
+	javax/swing/plaf/multi/MultiColorChooserUI.java \
+	javax/swing/plaf/multi/MultiComboBoxUI.java \
+	javax/swing/plaf/multi/MultiDesktopIconUI.java \
+	javax/swing/plaf/multi/MultiDesktopPaneUI.java \
+	javax/swing/plaf/multi/MultiFileChooserUI.java \
+	javax/swing/plaf/multi/MultiInternalFrameUI.java \
+	javax/swing/plaf/multi/MultiLabelUI.java \
+	javax/swing/plaf/multi/MultiListUI.java \
+	javax/swing/plaf/multi/MultiLookAndFeel.java \
+	javax/swing/plaf/multi/MultiMenuBarUI.java \
+	javax/swing/plaf/multi/MultiMenuItemUI.java \
+	javax/swing/plaf/multi/MultiOptionPaneUI.java \
+	javax/swing/plaf/multi/MultiPanelUI.java \
+	javax/swing/plaf/multi/MultiPopupMenuUI.java \
+	javax/swing/plaf/multi/MultiProgressBarUI.java \
+	javax/swing/plaf/multi/MultiRootPaneUI.java \
+	javax/swing/plaf/multi/MultiScrollBarUI.java \
+	javax/swing/plaf/multi/MultiScrollPaneUI.java \
+	javax/swing/plaf/multi/MultiSeparatorUI.java \
+	javax/swing/plaf/multi/MultiSliderUI.java \
+	javax/swing/plaf/multi/MultiSpinnerUI.java \
+	javax/swing/plaf/multi/MultiSplitPaneUI.java \
+	javax/swing/plaf/multi/MultiTabbedPaneUI.java \
+	javax/swing/plaf/multi/MultiTableHeaderUI.java \
+	javax/swing/plaf/multi/MultiTableUI.java \
+	javax/swing/plaf/multi/MultiTextUI.java \
+	javax/swing/plaf/multi/MultiToolBarUI.java \
+	javax/swing/plaf/multi/MultiToolTipUI.java \
+	javax/swing/plaf/multi/MultiTreeUI.java \
+	javax/swing/plaf/multi/MultiViewportUI.java
 javax_swing_table_SRCS = \
 	javax/swing/table/AbstractTableModel.java \
 	javax/swing/table/DefaultTableCellRenderer.java \
